src/metrics/snapshots/big_code_analysis__metrics__abc__tests__csharp_generic_type_args_no_double_count.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 1,
  "conditions": 0,
  "magnitude": 1.0,
  "value": 0.0,
  "assignments_average": 0.0,
  "branches_average": 0.3333333333333333,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 0
}
