src/metrics/snapshots/big_code_analysis__metrics__abc__tests__csharp_while_and_do_while_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2,
  "branches": 0,
  "conditions": 2,
  "magnitude": 2.8284271247461903,
  "assignments_average": 0.6666666666666666,
  "branches_average": 0.0,
  "conditions_average": 0.6666666666666666,
  "assignments_min": 0,
  "assignments_max": 2,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 2
}
