src/metrics/snapshots/big_code_analysis__metrics__abc__tests__elixir_case_is_condition_and_branch.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 2,
  "conditions": 1,
  "magnitude": 2.23606797749979,
  "assignments_average": 0.0,
  "branches_average": 0.6666666666666666,
  "conditions_average": 0.3333333333333333,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 1
}
